Actualizacion para adicionar concentracion en las ventas